# portfolio-management

./: .env.example  .gitignore  README.md  config.json  main.py  pyproject.toml
data/: market_data.py  trade_log.csv
logs/: trade_log.json
models/: return_model.py  simulator.py
portfolio/: allocator.py
risk/: var.py
settings/: config.json  config.py
src/: main.py
trader/: executor.py
